2002-07-19  Eric Blake  <ebb9@email.byu.edu>

	* src/ast.h (processing_try_block): Add.
	* src/body.cpp (UncaughtException, ProcessTryStatement): 
	Fix try-block handling, when a catch clause is interrupted by an
	abrupt finally, and when a try-finally is the sole statement in a
	do-while loop - bug 613.

2002-07-19  Eric Blake  <ebb9@email.byu.edu>

	* src/decl.cpp (CheckMethodOverride, AddInheritedMethods): Fix
	method overriding to detect package scope method conflicts when
	the method was not inherited.
	* src/error.cpp: Improve error message wording related to method
	inheritance.

2002-07-19  Eric Blake  <ebb9@email.byu.edu>

	* src/scanner.cpp (ScanStarComment): Only the most recent doc
	comment applies to a declaration.
	* src/getclass.cpp (ReadTypeFromSignature): 
	* src/symbol.cpp (FindOrInsertClassLiteralClass): Missed a case in
	previous commit.
	* src/expr.cpp (FindConstructor, FindMethodInType),
	(FindMethodInEnvironment, FindVariableInType),
	(FindVariableInEnvironment, ProcessAmbiguousName):
	* src/decl.cpp (ProcessTypeHeader, ProcessInterface),
	(ProcessFieldDeclaration, ProcessMethodDeclaration),
	(MustFindType):
	* src/semantic.h (InDeprecatedContext):
	* src/stream.h (ResetDeprecated):
	* src/symbol.h (TypeSymbol::ResetDeprecated): Silence deprecation
	warnings inside a deprecated context.

2002-07-18  Eric Blake  <ebb9@email.byu.edu>

	* src/expr.cpp (FindConstructor, FindMethodInType),
	(FindVariableInType, ProcessAmbiguousName),
	(GetAnonymousConstructor): Improve error messages for @deprecated.
	* src/body.cpp (ProcessSuperCall): Avoid repeating work, and thus
	duplicate error messages.
	* src/scanner.cpp (ScanStarComment): Fix @deprecated parsing - bug
	519.

2002-07-18  Eric Blake  <ebb9@email.byu.edu>

	* src/bytecode.cpp (EmitStatement): Fix case of infinite do-while
	loop emitting dead code - bug 3085.
	* src/expr.cpp (ProcessMethodName): Fix handling of non-inherited
	enclosing instance methods in explicit constructors - bug 3082.