@@ -1,3 +1,12 @@
+2002-07-22  Eric Blake  <ebb9@email.byu.edu>
+
+	* src/expr.cpp (CheckSimpleName): Fix use of shadow variables in
+	explicit constructor - bug 3119.
+	* src/error.cpp (PrintEXPRESSION_NOT_CONSTANT): Improve message -
+	bug 655.
+	(PrintBLOCKED_CATCH_CLAUSE): Improve message - bug 1858.
+	* src/body.cpp (ProcessTryStatement): Use improved message.
+
 2002-07-19  Eric Blake  <ebb9@email.byu.edu>
 
 	* src/ast.h (processing_try_block): Add.
